# b9

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  b9.cpp  b9.h  b9.js  b9core.cpp  b9core.hpp  b9hash.cpp  b9hash.hpp  b9jit.cpp  b9jit.hpp  b9object.hpp  b9stdlib.src  b9test.cpp  base9.hpp  bench.cpp  main.cpp  makefile  package.json  program.cpp  program.src  runall  test.cpp  test.src  test_sub.cpp  trace
b9/: CMakeLists.txt  assemble.cpp  core.cpp  deserialize.cpp  hash.cpp  jit.cpp  loader.cpp  primitives.cpp  serialize.cpp
b9/include/: b9.hpp
b9/include/b9/: ExecutionContext.hpp  JitHelpers.hpp  Module.hpp  OperandStack.hpp  VirtualMachine.hpp  assemble.hpp  binaryformat.hpp  bytecodes.hpp  core.hpp  deserialize.hpp  hash.hpp  instruction.hpp  instructions.hpp  interpreter.hpp  jit.hpp  loader.hpp  module.hpp  objects.hpp  serialize.hpp
b9/include/b9/compiler/: Compiler.hpp  GlobalTypes.hpp  MethodBuilder.hpp  State.hpp  VirtualMachineState.hpp
b9/src/: Compiler.cpp  ExecutionContext.cpp  JitHelpers.cpp  MethodBuilder.cpp  VirtualMachine.cpp  assemble.cpp  core.cpp  deserialize.cpp  jit.cpp  loader.cpp  primitives.cpp  serialize.cpp
b9asm/: CMakeLists.txt  b9asm.cpp  testAsm.cpp
b9assemble/: CMakeLists.txt
b9disasm/: CMakeLists.txt  b9disasm.cpp
b9disassemble/: CMakeLists.txt  b9disassemble.cpp  testModule.cpp
b9docker/: Dockerfile  build  dev.dockerfile  go  tutorial.dockerfile
b9objects/: CMakeLists.txt
b9run/: CMakeLists.txt  main.cpp
b9test/: CMakeLists.txt  b9test.cpp  b9testrunner.cpp  interpreter_test.src
cmake/Modules/: FindOmr.cmake
doc/: AssemblerSyntax.md  Deserializer.md  DeveloperJourney.md  FrontendAndBinaryMod.md  README.md  SetupBase9.md  b9.org  setupOSX.md
doc/images/: README.md
docker/: Dockerfile  README  build  go
docs/: 404.html  AboutBase9.md  B9Assembly.md  Blog.md  BuildARuntime.md  BuildBase9.md  CNAME  Deserializer.md  DeveloperJourney.md  Dictionary.md  DirectoryStructure.md  Disassembler.md  Documentation.md  FrontendAndBinaryMod.md  Gemfile  SetupBase9.md  SetupOSX.md  SetupUbuntu.md  Tutorials.md  _config.yml  about.md  binaryFormat.md  directoryStructure.md  index.md  setupOSX.md  setupUbuntu.md
docs/_data/: sections.yaml
docs/_includes/: active  chapter_list.liquid  dbg  debug.liquid  devHead.liquid  fig_img  footer.liquid  head.liquid  image.liquid  img  logo.liquid  nav_helpers.liquid  navbar.liquid  prev_next.liquid  sideNavbar.liquid  side_navbar.liquid  subchapter_list.liquid  topNavbar.liquid  top_navbar.liquid
docs/_layouts/: about.liquid  blog.liquid  book.liquid  chapter.liquid  content.liquid  default.liquid  devJourney.liquid  index.liquid  page.liquid  subchapter.liquid
docs/_sass/: syntax-highlight.scss
docs/assets/: main.scss
docs/build-a-runtime/: 1-0-getting-started.md  1-1-the-frontend-language.md  1-3-modules.md  (+10 more)
glue/: ArrayletObjectModel.hpp  CMakeLists.txt  CollectorLanguageInterfaceImpl.cpp  CollectorLanguageInterfaceImpl.hpp  CompactDelegate.hpp  CompactSchemeFixupObject.cpp  CompactSchemeFixupObject.hpp  ConcurrentMarkingDelegate.cpp  ConcurrentMarkingDelegate.hpp  ConfigurationDelegate.hpp  ContractslotScanner.hpp  EnvironmentDelegate.cpp  EnvironmentDelegate.hpp  FrequentObjectsStats.cpp  FrequentObjectsStats.hpp  GlobalCollectorDelegate.cpp  GlobalCollectorDelegate.hpp  LanguageSegregatedAllocationCache.hpp  LanguageThreadLocalHeap.hpp  LanguageVMGlue.c  MarkingDelegate.cpp  MarkingDelegate.hpp  MixedObjectModel.hpp  MixedObjectScanner.hpp  ObjectAllocationModel.hpp  ObjectIterator.hpp  ObjectModel.hpp  ObjectModelDelegate.cpp  ObjectModelDelegate.hpp  ObjectScannerState.hpp  Profiling.c  ScavengerBackOutScanner.hpp  ScavengerRootScanner.hpp  StartupManagerImpl.cpp  StartupManagerImpl.hpp  UtilGlue.c  VerboseManagerImpl.cpp  VerboseManagerImpl.hpp  objectdescription.h  omrExampleVM.cpp  (+2 more)
images/: README.md
include/: b9.hpp
js_compiler/: README.md  b9stdlib.src  compile.js  compiler.js
js_programs/: CMakeLists.txt
om/: CMakeLists.txt  README.md
om/glue/: CMakeLists.txt  CollectorLanguageInterfaceImpl.cpp  CollectorLanguageInterfaceImpl.hpp  CompactSchemeFixupObject.hpp  ConcurrentMarkingDelegate.hpp  ConfigurationDelegate.hpp  ContractslotScanner.hpp  EnvironmentDelegate.cpp  GlobalCollectorDelegate.cpp  LanguageThreadLocalHeap.hpp  LanguageVMGlue.c  MarkingDelegate.cpp  MarkingDelegate.hpp  MixedObjectModel.hpp  MixedObjectScanner.hpp  ObjectIterator.cpp  ObjectModel.hpp  ObjectModelDelegate.cpp  ObjectModelDelegate.hpp  ObjectScannerState.hpp  Profiling.c  ScavengerBackOutScanner.hpp  ScavengerRootScanner.hpp  StartupManagerImpl.cpp  VerboseManagerImpl.hpp  objectdescription.h  omrExampleVM.hpp
om/glue/configure_includes/: configure_common.mk  configure_linux_390.mk  configure_linux_arm.mk  configure_linux_ppc.mk  configure_osx.mk  configure_win_x86.mk  configure_zos_390.mk
om/include/OMR/Infra/: BitUtilities.hpp  Cons.hpp  Double.hpp  HashUtilities.hpp  PointerUtilities.hpp  SkeinHash.hpp  Span.hpp
om/include/OMR/Om/: Allocation.hpp  Allocator.hpp  Allocator.inl.hpp  AnyCell.hpp  Array.hpp  ArrayBuffer.hpp  ArrayBuffer.inl.hpp  ArrayBufferAllocator.hpp  ArrayBufferMap.hpp  ArrayBufferMap.inl.hpp  Barrier.hpp  Box.hpp  Cell.hpp  Config.hpp.in  Context.hpp  Context.inl.hpp  EmptyObjectMap.hpp  EmptyObjectMap.inl.hpp  Handle.hpp  HashTable.hpp  Id.hpp  Initializer.hpp  Map.hpp  Map.inl.hpp  MapDescriptor.hpp  Marker.hpp  MarkingFn.hpp  MemHandle.hpp  MemRef.hpp  MemTransitionSet.hpp  MemVector.hpp  MemoryManager.hpp  MemoryManager.inl.hpp  MetaMap.hpp  MetaMap.inl.hpp  Object.hpp  Object.inl.hpp  ObjectMap.hpp  ObjectMap.inl.hpp  Ref.hpp  (+12 more)
om/src/: MemoryManager.cpp
om/test/: CMakeLists.txt  DoubleTest.cpp  MemberHandleTest.cpp  MemoryManagerTest.cpp  RootTest.cpp  ValueTest.cpp
programs/: CMakeLists.txt  hello.src
test/: CMakeLists.txt  b9test.cpp  bench.cpp  factorial.src  fib.js  fib.src  hello.js  interpreter_test.js  interpreter_test.src  simple_add.src  test.src  testAsm.cpp  testDisasm.cpp
(+37 files in other folders)
